Horizontal gap fix.

--- a/obsidian.css
+++ b/obsidian.css
@@ -463,15 +463,32 @@ body.is-translucent .status-bar {
 .workspace-split > .workspace-leaf .view-header {
       margin-top: 0;
     }
-.workspace-split:not(.mod-root) > .workspace-split.mod-horizontal > .workspace-leaf .view-header {
+/* .workspace-split:not(.mod-root) > .workspace-split.mod-horizontal {
+  & > .workspace-leaf {
+    & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
-.workspace-split.mod-horizontal > .workspace-leaf ~ .workspace-leaf .view-header {
+  }
+} */
+.workspace-split.mod-horizontal > .workspace-split ~ .workspace-leaf,
+  .workspace-split.mod-horizontal > .workspace-leaf ~ .workspace-leaf {
+    margin-top: var(--workspace-leaf-gap);
+  }
+/* .workspace-split.mod-horizontal {
+  & > .workspace-split ~ .workspace-leaf,
+  & > .workspace-leaf ~ .workspace-leaf {
+    & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
-.workspace-split.mod-vertical:not(.mod-root) > .workspace-leaf .view-header {
+  }
+} */
+/* .workspace-split.mod-vertical:not(.mod-root) {
+  & > .workspace-leaf {
+    & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
+  }
+} */
 /* ----------------------------------------------- */
 /* Right (vertical) gap */
 .mod-left-split {
