--- a/src/230_workspace.css
+++ b/src/230_workspace.css
@@ -49,27 +49,34 @@
     }
   }
 }
-.workspace-split:not(.mod-root) > .workspace-split.mod-horizontal {
+/* .workspace-split:not(.mod-root) > .workspace-split.mod-horizontal {
   & > .workspace-leaf {
     & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
   }
-}
+} */
 .workspace-split.mod-horizontal {
+  & > .workspace-split ~ .workspace-leaf,
+  & > .workspace-leaf ~ .workspace-leaf {
+    margin-top: var(--workspace-leaf-gap);
+  }
+}
+/* .workspace-split.mod-horizontal {
+  & > .workspace-split ~ .workspace-leaf,
   & > .workspace-leaf ~ .workspace-leaf {
     & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
   }
-}
-.workspace-split.mod-vertical:not(.mod-root) {
+} */
+/* .workspace-split.mod-vertical:not(.mod-root) {
   & > .workspace-leaf {
     & .view-header {
       margin-top: var(--workspace-leaf-gap);
     }
   }
-}
+} */
 
 /* ----------------------------------------------- */
 /* Right (vertical) gap */
